src/objects/General_Configurations__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configurations used in Blackpurl app</description>
    <fields>
        <fullName>ARI_Partsmart10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ARI Partsmart10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ARI_Partsmart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ARI Partsmart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activate_Shopify_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Activating integration means facilitate the Shopify integration via the Super Connector API</description>
        <inlineHelpText>Activating integration means facilitate the Shopify integration via the Super Connector API</inlineHelpText>
        <label>Activate Shopify Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Tax_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will display &quot;Tax Invoice&quot; if it&apos;s value is true on all Invoice documents.</description>
        <inlineHelpText>It will display &quot;Tax Invoice&quot; if it&apos;s value is true on all Invoice documents.</inlineHelpText>
        <label>Display Tax Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Elastic_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will control visibility of new elastic search.</description>
        <inlineHelpText>This checkbox will control visibility of new elastic search.</inlineHelpText>
        <label>Enable Elastic Search?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Preferred_Payment__c</fullName>
	    <defaultValue>false</defaultValue>
	    <label>Enable Preferred Payment</label>
	    <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_QB_Accounting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable QB Accounting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Xero_Accounting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Xero Accounting</label>
        <type>Checkbox</type>
    </fields>    
    <fields>
        <fullName>Enable_QB_OAuth_2_0__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable QB OAuth 2.0</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Two_Way_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Configuration setting to enable or disable SMS reply functionality</description>
        <inlineHelpText>Configuration setting to enable or disable SMS reply functionality</inlineHelpText>
        <label>Enable Two Way Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Shopify_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enabling will expose elements on the front end side for setup purposes while leaving the actual integration inactive.</description>
        <inlineHelpText>Enabling will expose elements on the front end side for setup purposes while leaving the actual integration inactive.</inlineHelpText>
        <label>Enable Shopify Integration</label>
        <type>Checkbox</type>
	</fields>
    <fields>
        <fullName>Enable_Xero_OAuth_2_0__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Xero OAuth 2.0</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_branding_locations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable branding locations</description>
        <inlineHelpText>Enable branding locations</inlineHelpText>
        <label>Enable branding locations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Cassons__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for integration to the Cassons API.</description>
        <label>Enable Cassons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Foreign_Exchange_Costing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Configuration setting to enable Foreign Exchange Costing (Multicurrency). Once it is enabled then can not be change again.</description>
        <inlineHelpText>Configuration setting to enable Foreign Exchange Costing (Multicurrency). Once it is enabled then can not be change again.</inlineHelpText>
        <label>Enable Foreign Exchange Costing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Bar_Code_Label_Size__c</fullName>
        <defaultValue>&quot;Large&quot;</defaultValue>
        <description>Configuration to set bar code label size.</description>
        <inlineHelpText>Possible values are -
    1. Large
    2. Small</inlineHelpText>
        <label>Bar Code Label Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Number_of_Technicians__c</fullName>
        <label>Max Number of Technicians</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>Max_Number_of_Users__c</fullName>
        <description>Controls Max number of user displayed on user setting page.</description>
        <inlineHelpText>Controls Max number of user displayed on user setting page.</inlineHelpText>
        <label>Max Number of Users</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MESH_Enabled_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MESH Enabled Org</label>
        <type>Checkbox</type>
    </fields>    
    <fields>
        <fullName>H_D_Dealer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This new configuration will control the visibility of all new functionality related to Fusion Reporting.</description>
        <inlineHelpText>It controls the visibility of all functionality related to Fusion Reporting. 

WARNING - QB should be enabled before enabling this.</inlineHelpText>
        <label>H-D Dealer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Elasticsearch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enabling and disabling Elasticsearch search</description>
        <label>Hide Elasticsearch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Search_Grid_Page_Size__c</fullName>
        <label>Home Search Grid Page Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Preserve_QB_Config__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting is used to preserve the integration configuration while resetting token for unauthorized issue</description>
        <inlineHelpText>WARNING: This setting is used to preserve the integration configuration while resetting token for unauthorized issue</inlineHelpText>
        <label>Is Preserve Integration Config</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_System_Setting_Visited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is System Setting Visited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Trial_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Trial Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Using_Dymo_Connect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It controls the bar code label template XML selection for Dymo connect.</description>
        <inlineHelpText>Is Dealership using Dymo Connect?</inlineHelpText>
        <label>Is Using Dymo Connect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Widget_Removeable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Widget Removeable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Financing_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load Financing Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_New_Customer_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load New Customer Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_New_Header__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load New Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_New_UI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked, new UI will be reflected for selected pages</inlineHelpText>
        <label>Load New UI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_New_View_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load New View Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <label>Namespace</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Payment_Accounting_Enable_Time__c</fullName>
        <description>It will store the date time when the new payment accounting is enabled.</description>
        <label>New Payment Accounting Enable Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Related_List_Page_Size__c</fullName>
        <defaultValue>10</defaultValue>
        <inlineHelpText>Number of records to be displayed in related list at a time</inlineHelpText>
        <label>Related List Page Size</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduler_Start_Day__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Defines old scheduler start day. 
Contains value from 0 to 7 in following order 
Sunday - 0 
Monday - 1 
Tuesday - 2 
Wednesday - 3 
Thursday - 4 
Friday - 5 
Saturday - 6</description>
        <inlineHelpText>Defines old scheduler start day. 
Contains value from 0 to 7 in following order 
Sunday - 0 
Monday - 1 
Tuesday - 2 
Wednesday - 3 
Thursday - 4 
Friday - 5 
Saturday - 6</inlineHelpText>
        <label>Scheduler Start Day</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Data_to_Elastic_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please enable this checkbox if you want to sync data from Blackpurl to Elastic search</description>
        <inlineHelpText>Please enable this checkbox if you want to sync data from Blackpurl to Elastic search</inlineHelpText>
        <label>Send Data to Elastic Search?</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>Technician_Hours_Costing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technician Hours Costing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technician_Scheduling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To control the availability of all functionality related to technician scheduling</description>
        <label>Technician Scheduling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_CO_Async_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This toggle will handle the async action of adding line items in different sections of CO.</description>
        <inlineHelpText>This toggle will handle the async action of adding line items in different sections of CO.</inlineHelpText>
        <label>Use CO Async Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_QB_accounting_tax_codes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Configuration setting to define whether to use tax codes and rates for integration
(QB: Quickbooks Configuration setting to use tax agency and tax code version of QB (NON U.S.))</description>
        <label>Use accounting tax codes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_New_Payment_Accounting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use New Payment Accounting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VO_show_all_needs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VO - Show All Needs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dashboard_Refresh_Minutes__c</fullName>
        <label>Dashboard Refresh Minutes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VR_Related_List_Page_Size__c</fullName>
        <label>VR Related List Page Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WPM_Tag_Syncing__c</fullName>
	    <defaultValue>false</defaultValue>
	    <description>To control tag syncing on shopify from blackpurl, if turned ON it will override tags on shopify products to whatever in BP.</description>
	    <label>WPM Tag Syncing</label>
	    <type>Checkbox</type>
    </fields>
    <label>General Configurations</label>
</CustomObject>